--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
         distribution: 'adopt'
         cache: gradle
 
+    - name: Install needed dependencies
+      run: apt install libncurses5
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Run unit tests
