--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -17,6 +17,9 @@ jobs:
         distribution: 'zulu'
         java-version: 21
 
+    - name: Verify binary compatibility
+      run: ./gradlew check
+
     - name: Run unit tests
       run: ./gradlew allTests
 
