--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,5 @@ org.gradle.caching=true
 org.gradle.configuration-cache=true
 #Kotlin
 kotlin.code.style=official
+
+kotlin.native.enableKlibsCrossCompilation=true
