--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -25,4 +25,4 @@ jobs:
       run: ./gradlew check
 
     - name: Run unit tests
-      run: ./gradlew allTests
+      run: ./gradlew jvmTest
