--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,5 +24,8 @@ jobs:
     - name: Verify binary compatibility
       run: ./gradlew check
 
+    - name: Build
+      run: ./gradlew build
+
     - name: Run unit tests
       run: ./gradlew jvmTest
